objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Name_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Classification__c</fullName>
        <label>Facility Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Type_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Type Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Type_c</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneKey_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OneKey Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Org Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__OK_MDM_Is_Privacy_Law_Enabled_IMS__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, this account is flagged for Privacy Law regulations.</description>
        <inlineHelpText>If checked, this account is flagged for Privacy Law regulations.</inlineHelpText>
        <label>Is Privacy Law Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__OneKeyId_IMS__c</fullName>
        <description>OneKey Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>OneKeyId</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__ParentOneKeyID_IMS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Parent OneKey ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sponsor Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Represent a business or organization with contacts</description>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>